--- a/documentation/serenity-js.org/docs/reporting/serenity-bdd-reporter.mdx
+++ b/documentation/serenity-js.org/docs/reporting/serenity-bdd-reporter.mdx
@@ -6,4 +6,12 @@ import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
 
 # Serenity BDD Reporter
 
+## Configuring the Serenity BDD CLI
+
+### Using `serenity.properties`
+
+https://serenity-bdd.github.io/docs/reference/serenity-properties
+
+### Using command line arguments
+
 <ArticleComingSoon />
