--- a/documentation/serenity-js.org/docs/reporting/serenity-bdd-reporter.mdx
+++ b/documentation/serenity-js.org/docs/reporting/serenity-bdd-reporter.mdx
@@ -1,9 +1,17 @@
 ---
-sidebar_position: 2
+sidebar_position: 3
 ---
 
 import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
 
 # Serenity BDD Reporter
+
+## Configuring the Serenity BDD CLI
+
+### Using `serenity.properties`
+
+https://serenity-bdd.github.io/docs/reference/serenity-properties
+
+### Using command line arguments
 
 <ArticleComingSoon />
