docs(website): migrated mdx files to use mdx-code-block for imports
This approach is what Docusaurus itself uses and it feels cleaner than just adding imports directly
in the text

--- a/documentation/serenity-js.org/docs/design/assertions.mdx
+++ b/documentation/serenity-js.org/docs/design/assertions.mdx
@@ -1,8 +1,10 @@
 ---
 sidebar_position: 4
 ---
-import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
-
 # Assertions and Expectations
+
+```mdx-code-block
+import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
+```
 
 <ArticleComingSoon />
