--- a/documentation/serenity-js.org/docs/design/data-structures.mdx
+++ b/documentation/serenity-js.org/docs/design/data-structures.mdx
@@ -2,9 +2,11 @@
 sidebar_position: 6
 ---
 
-import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
-
 # Data structures
+
+```mdx-code-block
+import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
+```
 
 Key points:
 - `QuestionAdapter`
