--- a/documentation/serenity-js.org/docs/design/screenplay-pattern.mdx
+++ b/documentation/serenity-js.org/docs/design/screenplay-pattern.mdx
@@ -1,9 +1,12 @@
 ---
 sidebar_position: 1
 ---
-import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
 
 # Screenplay Pattern
+
+```mdx-code-block
+import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
+```
 
 Key points:
 - **Screenplay Pattern** helps your automated tests focus on business workflows and reduce the complexity of your framework
