--- a/documentation/serenity-js.org/docs/integration/github-actions.mdx
+++ b/documentation/serenity-js.org/docs/integration/github-actions.mdx
@@ -1,9 +1,13 @@
-import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
-
 # GitHub Actions
+
+```mdx-code-block
+import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
+```
 
 <ArticleComingSoon />
 
-## Running
+## Dependencies
 
-## GitHub Pages
+## Running tests
+
+## Publishing to GitHub Pages
