--- a/documentation/serenity-js.org/docs/integration/gitlab-ci.mdx
+++ b/documentation/serenity-js.org/docs/integration/gitlab-ci.mdx
@@ -1,9 +1,13 @@
-import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
-
 # GitLab CI
+
+```mdx-code-block
+import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
+```
 
 <ArticleComingSoon />
 
-## Running
+## Dependencies
 
-## GitLab Pages
+## Running tests
+
+## Publishing to GitLab Pages
