--- a/documentation/serenity-js.org/docs/integration/index.mdx
+++ b/documentation/serenity-js.org/docs/integration/index.mdx
@@ -3,8 +3,10 @@ sidebar_position: 10
 title: Integration
 ---
 
-import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
-
 # Integration
+
+```mdx-code-block
+import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
+```
 
 <ArticleComingSoon />
