--- a/documentation/serenity-js.org/docs/integration/jetbrains-idea.mdx
+++ b/documentation/serenity-js.org/docs/integration/jetbrains-idea.mdx
@@ -1,6 +1,8 @@
-import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
-
 # JetBrains IDEA
+
+```mdx-code-block
+import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
+```
 
 <ArticleComingSoon />
 
