--- a/documentation/serenity-js.org/docs/mobile-testing/your-first-mobile-scenario.mdx
+++ b/documentation/serenity-js.org/docs/mobile-testing/your-first-mobile-scenario.mdx
@@ -2,8 +2,10 @@
 sidebar_position: 1
 ---
 
-import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
-
 # Your first mobile scenario
+
+```mdx-code-block
+import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
+```
 
 <ArticleComingSoon />
