--- a/documentation/serenity-js.org/docs/reporting/serenity-bdd-reporter.mdx
+++ b/documentation/serenity-js.org/docs/reporting/serenity-bdd-reporter.mdx
@@ -2,9 +2,11 @@
 sidebar_position: 3
 ---
 
-import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
-
 # Serenity BDD Reporter
+
+```mdx-code-block
+import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
+```
 
 ## Configuring the Serenity BDD CLI
 
