--- a/documentation/serenity-js.org/docs/test-runners/playwright-test.mdx
+++ b/documentation/serenity-js.org/docs/test-runners/playwright-test.mdx
@@ -2,8 +2,10 @@
 sidebar_position: 4
 ---
 
-import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
-
 # Playwright Test
+
+```mdx-code-block
+import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
+```
 
 <ArticleComingSoon />
