--- a/documentation/serenity-js.org/docs/test-runners/protractor.mdx
+++ b/documentation/serenity-js.org/docs/test-runners/protractor.mdx
@@ -2,8 +2,10 @@
 sidebar_position: 5
 ---
 
-import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
-
 # Protractor
+
+```mdx-code-block
+import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
+```
 
 <ArticleComingSoon />
