--- a/documentation/serenity-js.org/docs/web-testing/page-element-query-language.mdx
+++ b/documentation/serenity-js.org/docs/web-testing/page-element-query-language.mdx
@@ -2,8 +2,10 @@
 sidebar_position: 3
 ---
 
-import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
-
 # Page Element Query Language
+
+```mdx-code-block
+import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
+```
 
 <ArticleComingSoon />
