--- a/documentation/serenity-js.org/docs/web-testing/serenity-js-web-modules.mdx
+++ b/documentation/serenity-js.org/docs/web-testing/serenity-js-web-modules.mdx
@@ -2,8 +2,10 @@
 sidebar_position: 2
 ---
 
-import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
-
 # Serenity/JS Web Modules
+
+```mdx-code-block
+import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
+```
 
 <ArticleComingSoon />
