--- a/documentation/serenity-js.org/docs/api-testing/your-first-api-scenario.mdx
+++ b/documentation/serenity-js.org/docs/api-testing/your-first-api-scenario.mdx
@@ -1,8 +1,11 @@
 ---
 sidebar_position: 1
 ---
-import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
 
 # Your first API scenario
+
+```mdx-code-block
+import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
+```
 
 <ArticleComingSoon />
