--- a/documentation/serenity-js.org/docs/design/debugging.mdx
+++ b/documentation/serenity-js.org/docs/design/debugging.mdx
@@ -2,9 +2,11 @@
 sidebar_position: 7
 ---
 
-import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
-
 # Debugging
+
+```mdx-code-block
+import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
+```
 
 <ArticleComingSoon />
 
