--- a/documentation/serenity-js.org/docs/design/flow-of-control.mdx
+++ b/documentation/serenity-js.org/docs/design/flow-of-control.mdx
@@ -2,8 +2,10 @@
 sidebar_position: 5
 ---
 
-import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
-
 # Flow of control
+
+```mdx-code-block
+import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
+```
 
 <ArticleComingSoon />
