--- a/documentation/serenity-js.org/docs/design/index.mdx
+++ b/documentation/serenity-js.org/docs/design/index.mdx
@@ -3,7 +3,9 @@ sidebar_position: 6
 title: Core Design Patterns
 ---
 
+```mdx-code-block
 import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
+```
 
 # Serenity/JS Core Design Patterns
 
