--- a/documentation/serenity-js.org/docs/design/reusable-test-code.mdx
+++ b/documentation/serenity-js.org/docs/design/reusable-test-code.mdx
@@ -2,8 +2,10 @@
 sidebar_position: 3
 ---
 
-import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
-
 # Reusable test code
+
+```mdx-code-block
+import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
+```
 
 <ArticleComingSoon />
