--- a/documentation/serenity-js.org/docs/integration/visual-studio-code.mdx
+++ b/documentation/serenity-js.org/docs/integration/visual-studio-code.mdx
@@ -1,6 +1,8 @@
-import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
-
 # Visual Studio Code
+
+```mdx-code-block
+import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
+```
 
 <ArticleComingSoon />
 
