--- a/documentation/serenity-js.org/docs/mobile-testing/index.mdx
+++ b/documentation/serenity-js.org/docs/mobile-testing/index.mdx
@@ -3,9 +3,11 @@ sidebar_position: 5
 title: Mobile testing
 ---
 
-import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
-
 # Mobile testing with Serenity/JS
+
+```mdx-code-block
+import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
+```
 
 <ArticleComingSoon />
 
