--- a/documentation/serenity-js.org/docs/reporting/artifact-archiver.mdx
+++ b/documentation/serenity-js.org/docs/reporting/artifact-archiver.mdx
@@ -2,8 +2,10 @@
 sidebar_position: 4
 ---
 
-import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
-
 # Artifact Archiver
+
+```mdx-code-block
+import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
+```
 
 <ArticleComingSoon />
