--- a/documentation/serenity-js.org/docs/reporting/stream-reporter.mdx
+++ b/documentation/serenity-js.org/docs/reporting/stream-reporter.mdx
@@ -2,8 +2,10 @@
 sidebar_position: 5
 ---
 
-import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
-
 # Stream Reporter
+
+```mdx-code-block
+import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
+```
 
 <ArticleComingSoon />
