--- a/documentation/serenity-js.org/docs/test-runners/cucumber.mdx
+++ b/documentation/serenity-js.org/docs/test-runners/cucumber.mdx
@@ -2,8 +2,10 @@
 sidebar_position: 1
 ---
 
-import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
-
 # Cucumber.js
+
+```mdx-code-block
+import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
+```
 
 <ArticleComingSoon />
