--- a/documentation/serenity-js.org/docs/test-runners/index.mdx
+++ b/documentation/serenity-js.org/docs/test-runners/index.mdx
@@ -2,8 +2,10 @@
 sidebar_position: 9
 ---
 
-import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
-
 # Test Runners
+
+```mdx-code-block
+import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
+```
 
 <ArticleComingSoon />
