--- a/documentation/serenity-js.org/docs/test-runners/jasmine.mdx
+++ b/documentation/serenity-js.org/docs/test-runners/jasmine.mdx
@@ -2,8 +2,10 @@
 sidebar_position: 2
 ---
 
-import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
-
 # Jasmine
+
+```mdx-code-block
+import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
+```
 
 <ArticleComingSoon />
