--- a/documentation/serenity-js.org/docs/web-testing/index.mdx
+++ b/documentation/serenity-js.org/docs/web-testing/index.mdx
@@ -2,8 +2,10 @@
 sidebar_position: 3
 title: Web testing
 ---
-import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
-
 # Web testing
+
+```mdx-code-block
+import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
+```
 
 <ArticleComingSoon />
