docs(website): documented ConsoleReporter

--- a/documentation/serenity-js.org/docs/reporting/domain-events.mdx
+++ b/documentation/serenity-js.org/docs/reporting/domain-events.mdx
@@ -9,3 +9,5 @@ import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
 ```
 
 <ArticleComingSoon />
+
+See available [`DomainEvents`](/api/core-events/class/DomainEvent).
