--- a/documentation/serenity-js.org/src/pages/contributing.mdx
+++ b/documentation/serenity-js.org/src/pages/contributing.mdx
@@ -1,9 +1,12 @@
 ---
 title: Contribute
 ---
-import Figure from '@site/src/components/Figure'
 
 # Contributing to Serenity/JS
+
+```mdx-code-block
+import Figure from '@site/src/components/Figure'
+```
 
 Hello and thank you for deciding to contribute to help Serenity/JS move forward!
 
@@ -124,10 +127,9 @@ When reporting a bug, please kindly remember that the easier you make it for the
 
 <Figure
     caption='"The art of bug reporting" by Andy Glover'
-    imgSrc="/images/the-art-of-bug-reporting.png"
+    img={require('@site/static/images/contributing/the-art-of-bug-reporting.png')}
     externalLink="https://cartoontester.blogspot.com/2012/02/art-of-bug-reporting.html"
 />
-
 
 ## Propose an enhancement
 
