--- a/documentation/serenity-js.org/docs/reporting/console-reporter.mdx
+++ b/documentation/serenity-js.org/docs/reporting/console-reporter.mdx
@@ -5,7 +5,49 @@ sidebar_position: 2
 # Console Reporter
 
 ```mdx-code-block
-import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
+import Figure from '@site/src/components/Figure'
 ```
 
-<ArticleComingSoon />
+[`ConsoleReporter`](/api/console-reporter/class/ConsoleReporter), available as part of the [`@serenity-js/console-reporter`](/api/console-reporter) module,
+writes text-based reports to your computer terminal.
+
+The reporter supports colour schemes for both light and dark terminals, as well as a monochromatic one.
+
+<Figure
+    caption='Example console output produced by ConsoleReporter'
+    img={require('@site/static/images/reporting/console-reporter.png')}
+/>
+
+## Installation and usage
+
+To learn about installing and configuring the module, please consult the [`@serenity-js/console-reporter` documentation](/api/console-reporter).
+
+You might also want to explore [Serenity/JS examples on GitHub](https://github.com/serenity-js/serenity-js/tree/main/examples).
+
+## Integration
+
+[`ConsoleReporter`](/api/console-reporter/class/ConsoleReporter) listens to [`DomainEvents`](/handbook/reporting/domain-events) emitted by [`Actors`](/api/core/class/Actor) and [Serenity/JS test runner adapters](/handbook/test-runners/).
+
+```mermaid
+graph TB
+    A(["fas:fa-users Actors"])
+    TRA(["fas:fa-plug Serenity/JS test runner adapter"])
+    S["Serenity"]
+    CR["ConsoleReporter"]
+    T["fas:fa-terminal text report"]
+    TRA -- notifies --> S
+    A -- notify --> S
+    S -- notifies --> CR
+    CR -- prints --> T
+    subgraph "core"
+    S
+    end
+    subgraph "console-reporter"
+    CR
+    end
+    class A socket
+    class TRA socket
+    click A "/handbook/design/actors.html"
+    click S "/modules/core/class/src/Serenity.ts~Serenity.html"
+    click CR "/modules/console-reporter"
+```
